--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,19 @@
-<div class="container">
-  <img src="profile.jpg" alt="Profilbild" class="profile-pic">
-  <div class="name">Nick Horstkott</div>
-  <div class="description">Webentwickler · Technikenthusiast · Kaffeejunkie</div>
-  <h1>// links</h1>
-  <a class="link-button" href="https://github.com/Bikholf" target="_blank" rel="noopener noreferrer">
-    <i class="fab fa-github"></i> github
-  </a>
-  <a class="link-button" href="https://www.linkedin.com/in/nick-horstkott-a301a3323/" target="_blank" rel="noopener noreferrer">
-    <i class="fab fa-linkedin-in"></i> linkedin
-  </a>
-  <a class="link-button" href="https://instagram.com/nick_htt" target="_blank" rel="noopener noreferrer">
-    <i class="fab fa-instagram"></i> instagram
-  </a>
+<div class="app-container">
+  <div class="container">
+    <img src="profile.jpg" alt="Profilbild" class="profile-pic">
+    <div class="name">Nick Horstkott</div>
+    <div class="description">Webentwickler · Technikenthusiast · Kaffeejunkie</div>
+    <h1>// links</h1>
+    <a class="link-button" href="https://github.com/Bikholf" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-github"></i> github
+    </a>
+    <a class="link-button" href="https://www.linkedin.com/in/nick-horstkott-a301a3323/" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-linkedin-in"></i> linkedin
+    </a>
+    <a class="link-button" href="https://instagram.com/nick_htt" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-instagram"></i> instagram
+    </a>
 
-  <div class="footer">&copy; 2025 // nickhtt</div>
+    <div class="footer">&copy; 2025 // nickhtt</div>
+  </div>
 </div>
