--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,10 +14,19 @@ body {
   align-items: center;
 }
 
+.app-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
 .container {
   background-color: #1a1d23;
   padding: 2rem;
   width: 100%;
+  height: fit-content;
   max-width: 500px;
   border-radius: 12px;
   box-shadow: 0 0 20px rgba(0, 128, 255, 0.2);
